OO-4068: make per default the QTI 1.2 editor read-only